# TrophyShot

./: CMakeLists.txt  README.md  TrophyShot.yml  main.c
app/: CMakeLists.txt  SceShellSvc.yml  TrophyShot.yml  trophy_app.c
main/: CMakeLists.txt  TrophyShot.yml  trophy_shell.c
